--- a/hackathonGame/main.html
+++ b/hackathonGame/main.html
@@ -107,7 +107,7 @@
 
 			<div style="position: absolute; top: 500px; left: 720px;">
 				<span><button id="btn"  class="primary large" style="margin-right: 20px; margin-top: 10px;">Measure</button></span>
-				<span><input id="clear" src="#" type="reset" value="Clear" class="large" style="margin-left: 20px; margin-top: 10px;"/></span>
+				<span><input id="clear" src="#" type="reset" value="next >" class="large" style="margin-left: 13px; margin-top: 10px;"/></span>
 				<!-- <button onclick="ran()">aaa</button> -->
 	
 			</div>
