--- a/hackathonGame/main.html
+++ b/hackathonGame/main.html
@@ -63,10 +63,10 @@
 				</div>
 				<!-- 方形底下&側邊 -->
 				<div>
-					<div style="background-color: #0E0B16; width: 80px; height: 80px; position: absolute; top: 580px; left: 60px; border: 1px #ccc dashed"></div>
-					<div style="background-color: #0E0B16; width: 80px; height: 80px; position: absolute; top: 580px; left: 190px; border: 1px #ccc dashed"></div>
-					<div style="background-color: #0E0B16; width: 80px; height: 80px; position: absolute; top: 580px; left: 320px; border: 1px #ccc dashed"></div>
-					<div style="background-color: #0E0B16; width: 80px; height: 80px; position: absolute; top: 580px; left: 450px; border: 1px #ccc dashed"></div>
+					<div style="background-color: #0E0B16; width: 80px; height: 80px; position: absolute; top: 600px; left: 60px; border: 1px #ccc dashed"></div>
+					<div style="background-color: #0E0B16; width: 80px; height: 80px; position: absolute; top: 600px; left: 190px; border: 1px #ccc dashed"></div>
+					<div style="background-color: #0E0B16; width: 80px; height: 80px; position: absolute; top: 600px; left: 320px; border: 1px #ccc dashed"></div>
+					<div style="background-color: #0E0B16; width: 80px; height: 80px; position: absolute; top: 600px; left: 450px; border: 1px #ccc dashed"></div>
 				</div>
 				<div>
 					<div style="background-color: #0E0B16; width: 80px; height: 80px; position: absolute; top: 80px; left: 560px; border: 1px #ccc dashed"></div>
@@ -105,7 +105,7 @@
 
 			</div>
 
-			<div style="position: absolute; top: 500px; left: 720px;">
+			<div>
 				<span><button id="btn"  class="primary large" style="margin-right: 20px; margin-top: 10px;">Measure</button></span>
 				<span><input id="clear" src="#" type="reset" value="next >" class="large" style="margin-left: 13px; margin-top: 10px;"/></span>
 				<!-- <button onclick="ran()">aaa</button> -->
