--- a/hackathonGame/main.html
+++ b/hackathonGame/main.html
@@ -63,10 +63,10 @@
 				</div>
 				<!-- 方形底下&側邊 -->
 				<div>
-					<div style="background-color: #0E0B16; width: 80px; height: 80px; position: absolute; top: 600px; left: 60px; border: 1px #ccc dashed"></div>
-					<div style="background-color: #0E0B16; width: 80px; height: 80px; position: absolute; top: 600px; left: 190px; border: 1px #ccc dashed"></div>
-					<div style="background-color: #0E0B16; width: 80px; height: 80px; position: absolute; top: 600px; left: 320px; border: 1px #ccc dashed"></div>
-					<div style="background-color: #0E0B16; width: 80px; height: 80px; position: absolute; top: 600px; left: 450px; border: 1px #ccc dashed"></div>
+					<div style="background-color: #0E0B16; width: 80px; height: 80px; position: absolute; top: 580px; left: 60px; border: 1px #ccc dashed"></div>
+					<div style="background-color: #0E0B16; width: 80px; height: 80px; position: absolute; top: 580px; left: 190px; border: 1px #ccc dashed"></div>
+					<div style="background-color: #0E0B16; width: 80px; height: 80px; position: absolute; top: 580px; left: 320px; border: 1px #ccc dashed"></div>
+					<div style="background-color: #0E0B16; width: 80px; height: 80px; position: absolute; top: 580px; left: 450px; border: 1px #ccc dashed"></div>
 				</div>
 				<div>
 					<div style="background-color: #0E0B16; width: 80px; height: 80px; position: absolute; top: 80px; left: 560px; border: 1px #ccc dashed"></div>
@@ -80,7 +80,7 @@
 			<br/>
 			<br/>
 			<!-- <div style="width: 80px; height: 25px; background-color: #4717F6; position: absolute; top: 64.5px; left: 920px; border-top: #ccc solid 2px; border-right: #ccc solid 2px;"></div> -->
-			<div class="fangge"><h3>Available Gates</h3></div>
+			<div class="fangge"><h3 style="font-size: 1.5em;">Available Gates</h3></div>
 			
 			<div class="container33" style="float: left;">
 
@@ -105,7 +105,7 @@
 
 			</div>
 
-			<div>
+			<div style="position: absolute; top: 500px; left: 720px;">
 				<span><button id="btn"  class="primary large" style="margin-right: 20px; margin-top: 10px;">Measure</button></span>
 				<span><input id="clear" src="#" type="reset" value="next >" class="large" style="margin-left: 13px; margin-top: 10px;"/></span>
 				<!-- <button onclick="ran()">aaa</button> -->
