--- a/hackathonGame/main.html
+++ b/hackathonGame/main.html
@@ -4,7 +4,7 @@
 	<head>
 		<title>Quantum gate game | QHACK Open Hackathon</title>
 		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes" />
 		<link rel="stylesheet" href="style.css" />
 		<link rel="stylesheet" href="../assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="../assets/css/noscript.css" /></noscript>
@@ -80,7 +80,7 @@
 			<br/>
 			<br/>
 			<!-- <div style="width: 80px; height: 25px; background-color: #4717F6; position: absolute; top: 64.5px; left: 920px; border-top: #ccc solid 2px; border-right: #ccc solid 2px;"></div> -->
-			<div class="fangge"><h3 style="font-size: 1.5em;">Available Gates</h3></div>
+			<div class="fangge"><h3>Available Gates</h3></div>
 			
 			<div class="container33" style="float: left;">
 
@@ -105,9 +105,10 @@
 
 			</div>
 
-			<div style="position: absolute; top: 500px; left: 720px;">
-				<span><button id="btn"  class="primary large" style="margin-right: 20px; margin-top: 10px;">Measure</button></span>
-				<span><input id="clear" src="#" type="reset" value="next >" class="large" style="margin-left: 13px; margin-top: 10px;"/></span>
+			<div id="button" style="position: absolute; top: 500px; left: 720px;">
+				<span><button id="bt"  class="primary large" style="margin-right: 28px; margin-top: 10px;">Measure</button></span>
+				<span><input id="next" type="reset" value="next >" class="large" style="margin-top: 10px;"/></span>
+				
 				<!-- <button onclick="ran()">aaa</button> -->
 	
 			</div>
