--- a/hackathonGame/main.html
+++ b/hackathonGame/main.html
@@ -11,10 +11,10 @@
 		<script type="text/javascript" src="/eel.js"></script>
 		<script src="tuoyi.js"></script> 
 	</head>
-	<body class="is-preload">
+	<body class="is-preload" style="background-color: white;">
 
 		<!-- Wrapper -->
-			<div id="wrapper">
+			<div id="wrapper" style="background-color: #0E0B16;">
 
 				<!-- Header -->
 				<!-- Note: The "styleN" class below should match that of the banner element. -->
@@ -31,89 +31,95 @@
 					</nav>
 			</div>
 
-			<!-- 4x4棋盤 -->
-			<div class="container44" style="float: left;">
-				<div id="Box2" ondrop="Drop(event)" ondragover="AllowDrop(event)" on></div>
-				<div id="Box3" ondrop="Drop(event)" ondragover="AllowDrop(event)"></div>
-				<div id="Box4" ondrop="Drop(event)" ondragover="AllowDrop(event)"></div>
-				<div id="Box5" ondrop="Drop(event)" ondragover="AllowDrop(event)"></div>
-				<div id="Box6" ondrop="Drop(event)" ondragover="AllowDrop(event)"></div>
-				<div id="Box7" ondrop="Drop(event)" ondragover="AllowDrop(event)"></div>
-				<div id="Box8" ondrop="Drop(event)" ondragover="AllowDrop(event)"></div>
-				<div id="Box9" ondrop="Drop(event)" ondragover="AllowDrop(event)"></div>
-				<div id="Box0" ondrop="Drop(event)" ondragover="AllowDrop(event)"></div>
-				<div id="Box11" ondrop="Drop(event)" ondragover="AllowDrop(event)"></div>
-				<div id="Box12" ondrop="Drop(event)" ondragover="AllowDrop(event)"></div>
-				<div id="Box13" ondrop="Drop(event)" ondragover="AllowDrop(event)"></div>
-				<div id="Box14" ondrop="Drop(event)" ondragover="AllowDrop(event)"></div>
-				<div id="Box15" ondrop="Drop(event)" ondragover="AllowDrop(event)"></div>
-				<div id="Box16" ondrop="Drop(event)" ondragover="AllowDrop(event)"></div>
-				<div id="Box17" ondrop="Drop(event)" ondragover="AllowDrop(event)"></div>
-				<div style="clear:both;"></div>
+		<div id="anniu" style="height: 80px; width: 1050px; position: relative;">
+			<img src="../blog/picture/fang.png" width="10px" style="float: left; position: absolute;top: 20px; left: 10px;"/>
+			<h1 style="position: absolute;left: 30px; top: 5px; color: #0E0B16;">Quantum Gate Game</h1>
+		</div>
+
+		<div class="all">
+			<!-- 棋盤+輸出 -->
+			<div class="leftall">
+				<!-- 4x4棋盤 -->
+					<div class="container44" style="float: left;">
+					<div id="Box2" ondrop="Drop(event)" ondragover="AllowDrop(event)" on></div>
+					<div id="Box3" ondrop="Drop(event)" ondragover="AllowDrop(event)"></div>
+					<div id="Box4" ondrop="Drop(event)" ondragover="AllowDrop(event)"></div>
+					<div id="Box5" ondrop="Drop(event)" ondragover="AllowDrop(event)"></div>
+					<div id="Box6" ondrop="Drop(event)" ondragover="AllowDrop(event)"></div>
+					<div id="Box7" ondrop="Drop(event)" ondragover="AllowDrop(event)"></div>
+					<div id="Box8" ondrop="Drop(event)" ondragover="AllowDrop(event)"></div>
+					<div id="Box9" ondrop="Drop(event)" ondragover="AllowDrop(event)"></div>
+					<div id="Box0" ondrop="Drop(event)" ondragover="AllowDrop(event)"></div>
+					<div id="Box11" ondrop="Drop(event)" ondragover="AllowDrop(event)"></div>
+					<div id="Box12" ondrop="Drop(event)" ondragover="AllowDrop(event)"></div>
+					<div id="Box13" ondrop="Drop(event)" ondragover="AllowDrop(event)"></div>
+					<div id="Box14" ondrop="Drop(event)" ondragover="AllowDrop(event)"></div>
+					<div id="Box15" ondrop="Drop(event)" ondragover="AllowDrop(event)"></div>
+					<div id="Box16" ondrop="Drop(event)" ondragover="AllowDrop(event)"></div>
+					<div id="Box17" ondrop="Drop(event)" ondragover="AllowDrop(event)"></div>
+					<div style="clear:both;"></div>
+				</div>
+
+				<!-- 分數格 -->
+				<div>
+					<!-- 圓形 -->
+					<div>
+						<img src="picture/measureZ.png" style="background-color: #0E0B16; width: 80px; height: 80px; border: 1px #ccc dashed; border-radius: 40px; position: absolute; top: 90px; left: 90px;">
+						<img src="picture/measureZ.png" style="background-color: #0E0B16; width: 80px; height: 80px; border: 1px #ccc dashed; border-radius: 40px; position: absolute; top: 90px; left: 350px;">
+						<img src="picture/measureZ.png" style="background-color: #0E0B16; width: 80px; height: 80px; border: 1px #ccc dashed; border-radius: 40px; position: absolute; top: 350px; left: 90px;">
+						<img src="picture/measureZ.png" style="background-color: #0E0B16; width: 80px; height: 80px; border: 1px #ccc dashed; border-radius: 40px; position: absolute; top: 350px; left: 350px;">
+					</div>
+					<!-- 方形底下&側邊 -->
+					<div>
+						<img src="picture/measureZ.png" style="width: 80px; height: 80px; position: absolute; bottom: 0px; left: 25px;">
+						<img src="picture/measureZ.png" style="width: 80px; height: 80px; position: absolute; bottom: 0px; left: 158px;">
+						<img src="picture/measureZ.png" style="width: 80px; height: 80px; position: absolute; bottom: 0px; left: 285px;">
+						<img src="picture/measureZ.png" style="width: 80px; height: 80px; position: absolute; bottom: 0px; left: 418px;">
+					</div>
+					<div>
+						<img src="picture/measureZ.png" style="width: 80px; height: 80px; position: absolute; top: 25px; right: 0px;">
+						<img src="picture/measureZ.png" style="width: 80px; height: 80px; position: absolute; top: 158px; right: 0px;">
+						<img src="picture/measureZ.png" style="width: 80px; height: 80px; position: absolute; top: 285px; right: 0px;">
+						<img src="picture/measureZ.png" style="width: 80px; height: 80px; position: absolute; top: 418px; right: 0px;">
+					</div>
+				</div>
 			</div>
 
-			<!-- 分數格 -->
-			<div>
-				<!-- 圓形 -->
-				<div>
-					<div style="background-color: #0E0B16; width: 80px; height: 80px; border: 1px #ccc dashed; border-radius: 40px; position: absolute; top: 140px; left: 120px;"></div>
-					<div style="background-color: #0E0B16; width: 80px; height: 80px; border: 1px #ccc dashed; border-radius: 40px; position: absolute; top: 140px; left: 380px;"></div>
-					<div style="background-color: #0E0B16; width: 80px; height: 80px; border: 1px #ccc dashed; border-radius: 40px; position: absolute; top: 400px; left: 120px;"></div>
-					<div style="background-color: #0E0B16; width: 80px; height: 80px; border: 1px #ccc dashed; border-radius: 40px; position: absolute; top: 400px; left: 380px;"></div>
-				</div>
-				<!-- 方形底下&側邊 -->
-				<div>
-					<div style="background-color: #0E0B16; width: 80px; height: 80px; position: absolute; top: 580px; left: 60px; border: 1px #ccc dashed"></div>
-					<div style="background-color: #0E0B16; width: 80px; height: 80px; position: absolute; top: 580px; left: 190px; border: 1px #ccc dashed"></div>
-					<div style="background-color: #0E0B16; width: 80px; height: 80px; position: absolute; top: 580px; left: 320px; border: 1px #ccc dashed"></div>
-					<div style="background-color: #0E0B16; width: 80px; height: 80px; position: absolute; top: 580px; left: 450px; border: 1px #ccc dashed"></div>
-				</div>
-				<div>
-					<div style="background-color: #0E0B16; width: 80px; height: 80px; position: absolute; top: 80px; left: 560px; border: 1px #ccc dashed"></div>
-					<div style="background-color: #0E0B16; width: 80px; height: 80px; position: absolute; top: 210px; left: 560px; border: 1px #ccc dashed"></div>
-					<div style="background-color: #0E0B16; width: 80px; height: 80px; position: absolute; top: 340px; left: 560px; border: 1px #ccc dashed"></div>
-					<div style="background-color: #0E0B16; width: 80px; height: 80px; position: absolute; top: 470px; left: 560px; border: 1px #ccc dashed"></div>
-				</div>
-			</div>
-
-
-			<br/>
-			<br/>
+			<div class="rightall">
 			<!-- <div style="width: 80px; height: 25px; background-color: #4717F6; position: absolute; top: 64.5px; left: 920px; border-top: #ccc solid 2px; border-right: #ccc solid 2px;"></div> -->
-			<div class="fangge"><h3>Available Gates</h3></div>
-			
-			<div class="container33" style="float: left;">
+				<div class="container33" >
 
-				<div id="Box18" ondrop="Drop(event)" ondragover="AllowDrop(event)">
-					<img id="Img1" src="picture/control.jpg" draggable="true" ondragstart="Drag(event)" style="width: 100px; height: 100px;"></div>
-				<div id="Box19" ondrop="Drop(event)" ondragover="AllowDrop(event)">
-					<img id="Img2" src="picture/Hadamard0.jpg" draggable="true" ondragstart="Drag(event)" style="width: 100px; height: 100px;"></div>
-				<div id="Box20" ondrop="Drop(event)" ondragover="AllowDrop(event)">
-					<img id="Img3" src="picture/Hadamard1.jpg" draggable="true" ondragstart="Drag(event)" style="width: 100px; height: 100px;"></div>
-				<div id="Box21" ondrop="Drop(event)" ondragover="AllowDrop(event)">
-					<img id="Img4" src="picture/PauliX0.jpg" draggable="true" ondragstart="Drag(event)" style="width: 100px; height: 100px;"></div>
-				<div id="Box22" ondrop="Drop(event)" ondragover="AllowDrop(event)">
-					<img id="Img5" src="picture/PauliX1.jpg" draggable="true" ondragstart="Drag(event)" style="width: 100px; height: 100px;"></div>
-				<div id="Box23" ondrop="Drop(event)" ondragover="AllowDrop(event)">
-					<img id="Img6" src="picture/PauliZ0.jpg" draggable="true" ondragstart="Drag(event)" style="width: 100px; height: 100px;"></div>
-				<div id="Box24" ondrop="Drop(event)" ondragover="AllowDrop(event)">
-					<img id="Img7" src="picture/PauliZ1.jpg" draggable="true" ondragstart="Drag(event)" style="width: 100px; height: 100px;"></div>
-				<div id="Box25" ondrop="Drop(event)" ondragover="AllowDrop(event)">
-					<img id="Img8" src="picture/Identity0.jpg" draggable="true" ondragstart="Drag(event)" style="width: 100px; height: 100px;"></div>
-				<div id="Box26" ondrop="Drop(event)" ondragover="AllowDrop(event)">
-					<img id="Img9" src="picture/Identity1.jpg" draggable="true" ondragstart="Drag(event)" style="width: 100px; height: 100px;"></div>
+					<div id="Box18" ondrop="Drop(event)" ondragover="AllowDrop(event)">
+						<img id="Img1" src="picture/control.jpg" draggable="true" ondragstart="Drag(event)" style="width: 100px; height: 100px;"></div>
+					<div id="Box19" ondrop="Drop(event)" ondragover="AllowDrop(event)">
+						<img id="Img2" src="picture/Hadamard0.jpg" draggable="true" ondragstart="Drag(event)" style="width: 100px; height: 100px;"></div>
+					<div id="Box20" ondrop="Drop(event)" ondragover="AllowDrop(event)">
+						<img id="Img3" src="picture/Hadamard1.jpg" draggable="true" ondragstart="Drag(event)" style="width: 100px; height: 100px;"></div>
+					<div id="Box21" ondrop="Drop(event)" ondragover="AllowDrop(event)">
+						<img id="Img4" src="picture/PauliX0.jpg" draggable="true" ondragstart="Drag(event)" style="width: 100px; height: 100px;"></div>
+					<div id="Box22" ondrop="Drop(event)" ondragover="AllowDrop(event)">
+						<img id="Img5" src="picture/PauliX1.jpg" draggable="true" ondragstart="Drag(event)" style="width: 100px; height: 100px;"></div>
+					<div id="Box23" ondrop="Drop(event)" ondragover="AllowDrop(event)">
+						<img id="Img6" src="picture/PauliZ0.jpg" draggable="true" ondragstart="Drag(event)" style="width: 100px; height: 100px;"></div>
+					<div id="Box24" ondrop="Drop(event)" ondragover="AllowDrop(event)">
+						<img id="Img7" src="picture/PauliZ1.jpg" draggable="true" ondragstart="Drag(event)" style="width: 100px; height: 100px;"></div>
+					<div id="Box25" ondrop="Drop(event)" ondragover="AllowDrop(event)">
+						<img id="Img8" src="picture/Identity0.jpg" draggable="true" ondragstart="Drag(event)" style="width: 100px; height: 100px;"></div>
+					<div id="Box26" ondrop="Drop(event)" ondragover="AllowDrop(event)">
+						<img id="Img9" src="picture/Identity1.jpg" draggable="true" ondragstart="Drag(event)" style="width: 100px; height: 100px;"></div>
 
-			</div>
+				</div>
 
-			<div id="button" style="position: absolute; top: 500px; left: 720px;">
-				<span><button id="bt"  class="primary large" style="margin-right: 28px; margin-top: 10px;">Measure</button></span>
-				<span><input id="next" type="reset" value="next >" class="large" style="margin-top: 10px;"/></span>
+				<div class="fangge"><h3>Available Gates</h3></div>
+
+				<div>
+					<span><button id="button"  class="primary large" style="margin: 0px; position: absolute; bottom: 0px; left: 0px;" disabled="disabled">Measure</button></span>
+					<span><input id="next" type="reset" value="next >" class="large" style="margin: 0px; position: absolute; bottom: 0px; right: 0px; max-width: 400px; word-break:break-all"/></span>
 				
 				<!-- <button onclick="ran()">aaa</button> -->
-	
-			</div>
-																
-			
+				</div>
+			</div>													
+		</div>
 
 		<!-- Scripts -->
 		<script src="../assets/js/jquery.min.js"></script>
