--- a/hackathonGame/main.html
+++ b/hackathonGame/main.html
@@ -41,22 +41,22 @@
 			<div class="leftall">
 				<!-- 4x4棋盤 -->
 					<div class="container44" style="float: left;">
-					<div id="Box1" ondrop="Drop(event)" ondragover="AllowDrop(event)"></div>
-					<div id="Box2" ondrop="Drop(event)" ondragover="AllowDrop(event)" on></div>
-					<div id="Box3" ondrop="Drop(event)" ondragover="AllowDrop(event)"></div>
-					<div id="Box4" ondrop="Drop(event)" ondragover="AllowDrop(event)"></div>
-					<div id="Box5" ondrop="Drop(event)" ondragover="AllowDrop(event)"></div>
-					<div id="Box6" ondrop="Drop(event)" ondragover="AllowDrop(event)"></div>
-					<div id="Box7" ondrop="Drop(event)" ondragover="AllowDrop(event)"></div>
-					<div id="Box8" ondrop="Drop(event)" ondragover="AllowDrop(event)"></div>
-					<div id="Box9" ondrop="Drop(event)" ondragover="AllowDrop(event)"></div>
-					<div id="Box10" ondrop="Drop(event)" ondragover="AllowDrop(event)"></div>
-					<div id="Box11" ondrop="Drop(event)" ondragover="AllowDrop(event)"></div>
-					<div id="Box12" ondrop="Drop(event)" ondragover="AllowDrop(event)"></div>
-					<div id="Box13" ondrop="Drop(event)" ondragover="AllowDrop(event)"></div>
-					<div id="Box14" ondrop="Drop(event)" ondragover="AllowDrop(event)"></div>
-					<div id="Box15" ondrop="Drop(event)" ondragover="AllowDrop(event)"></div>
-					<div id="Box16" ondrop="Drop(event)" ondragover="AllowDrop(event)"></div>
+					<div id="Box1" ondrop="Drop1(event)" ondragover="AllowDrop(event)"></div>
+					<div id="Box2" ondrop="Drop2(event)" ondragover="AllowDrop(event)"></div>
+					<div id="Box3" ondrop="Drop3(event)" ondragover="AllowDrop(event)"></div>
+					<div id="Box4" ondrop="Drop4(event)" ondragover="AllowDrop(event)"></div>
+					<div id="Box5" ondrop="Drop5(event)" ondragover="AllowDrop(event)"></div>
+					<div id="Box6" ondrop="Drop6(event)" ondragover="AllowDrop(event)"></div>
+					<div id="Box7" ondrop="Drop7(event)" ondragover="AllowDrop(event)"></div>
+					<div id="Box8" ondrop="Drop8(event)" ondragover="AllowDrop(event)"></div>
+					<div id="Box9" ondrop="Drop9(event)" ondragover="AllowDrop(event)"></div>
+					<div id="Box10" ondrop="Drop10(event)" ondragover="AllowDrop(event)"></div>
+					<div id="Box11" ondrop="Drop11(event)" ondragover="AllowDrop(event)"></div>
+					<div id="Box12" ondrop="Drop12(event)" ondragover="AllowDrop(event)"></div>
+					<div id="Box13" ondrop="Drop13(event)" ondragover="AllowDrop(event)"></div>
+					<div id="Box14" ondrop="Drop14(event)" ondragover="AllowDrop(event)"></div>
+					<div id="Box15" ondrop="Drop15(event)" ondragover="AllowDrop(event)"></div>
+					<div id="Box16" ondrop="Drop16(event)" ondragover="AllowDrop(event)"></div>
 					
 					<div style="clear:both;"></div>
 				</div>
@@ -71,10 +71,10 @@
 						<div style="position: absolute; left: 10px; top:468px">4</div>
 					</div>
 					<div>
-						<div style="position: absolute; left: 75px; top:-5px">A</div>
-						<div style="position: absolute; left: 208px; top:-5px">B</div>
-						<div style="position: absolute; left: 335px; top:-5px">C</div>
-						<div style="position: absolute; left: 468px; top:-5px">D</div>
+						<div style="position: absolute; left: 100px; top:-10px">A</div>
+						<div style="position: absolute; left: 233px; top:-10px">B</div>
+						<div style="position: absolute; left: 355px; top:-10px">C</div>
+						<div style="position: absolute; left: 493px; top:-10px">D</div>
 					</div>
 				</div>
 
@@ -108,23 +108,23 @@
 				<div class="container33" >
 
 					<div id="Box18" ondrop="Drop(event)" ondragover="AllowDrop(event)">
-						<img id="Img1" src="picture/control.jpg" draggable="true" ondragstart="Drag(event)" style="width: 100px; height: 100px;"></div>
+						<img id="control" src="picture/control.jpg" draggable="true" ondragstart="Drag(event)" style="width: 100px; height: 100px;"></div>
 					<div id="Box19" ondrop="Drop(event)" ondragover="AllowDrop(event)">
-						<img id="Img2" src="picture/Hadamard0.jpg" draggable="true" ondragstart="Drag(event)" style="width: 100px; height: 100px;"></div>
+						<img id="Hadamard0" src="picture/Hadamard0.jpg" draggable="true" ondragstart="Drag(event)" style="width: 100px; height: 100px;"></div>
 					<div id="Box20" ondrop="Drop(event)" ondragover="AllowDrop(event)">
-						<img id="Img3" src="picture/Hadamard1.jpg" draggable="true" ondragstart="Drag(event)" style="width: 100px; height: 100px;"></div>
+						<img id="Hadamard1" src="picture/Hadamard1.jpg" draggable="true" ondragstart="Drag(event)" style="width: 100px; height: 100px;"></div>
 					<div id="Box21" ondrop="Drop(event)" ondragover="AllowDrop(event)">
-						<img id="Img4" src="picture/PauliX0.jpg" draggable="true" ondragstart="Drag(event)" style="width: 100px; height: 100px;"></div>
+						<img id="PauliX0" src="picture/PauliX0.jpg" draggable="true" ondragstart="Drag(event)" style="width: 100px; height: 100px;"></div>
 					<div id="Box22" ondrop="Drop(event)" ondragover="AllowDrop(event)">
-						<img id="Img5" src="picture/PauliX1.jpg" draggable="true" ondragstart="Drag(event)" style="width: 100px; height: 100px;"></div>
+						<img id="PauliX1" src="picture/PauliX1.jpg" draggable="true" ondragstart="Drag(event)" style="width: 100px; height: 100px;"></div>
 					<div id="Box23" ondrop="Drop(event)" ondragover="AllowDrop(event)">
-						<img id="Img6" src="picture/PauliZ0.jpg" draggable="true" ondragstart="Drag(event)" style="width: 100px; height: 100px;"></div>
+						<img id="PauliZ0" src="picture/PauliZ0.jpg" draggable="true" ondragstart="Drag(event)" style="width: 100px; height: 100px;"></div>
 					<div id="Box24" ondrop="Drop(event)" ondragover="AllowDrop(event)">
-						<img id="Img7" src="picture/PauliZ1.jpg" draggable="true" ondragstart="Drag(event)" style="width: 100px; height: 100px;"></div>
+						<img id="PauliZ1" src="picture/PauliZ1.jpg" draggable="true" ondragstart="Drag(event)" style="width: 100px; height: 100px;"></div>
 					<div id="Box25" ondrop="Drop(event)" ondragover="AllowDrop(event)">
-						<img id="Img8" src="picture/Identity0.jpg" draggable="true" ondragstart="Drag(event)" style="width: 100px; height: 100px;"></div>
+						<img id="Identity0" src="picture/Identity0.jpg" draggable="true" ondragstart="Drag(event)" style="width: 100px; height: 100px;"></div>
 					<div id="Box26" ondrop="Drop(event)" ondragover="AllowDrop(event)">
-						<img id="Img9" src="picture/Identity1.jpg" draggable="true" ondragstart="Drag(event)" style="width: 100px; height: 100px;"></div>
+						<img id="Identity1" src="picture/Identity1.jpg" draggable="true" ondragstart="Drag(event)" style="width: 100px; height: 100px;"></div>
 
 				</div>
 
@@ -199,7 +199,10 @@
 				</div>
 			</div>													
 		</div>
-		<!-- <h2>Description</h2> -->
+		<div>
+			<h2 style="color: #0E0B16;">Description</h2>
+		</div>
+		
 
 		<!-- Scripts -->
 		<script src="../assets/js/jquery.min.js"></script>
