--- a/BB84/main.html
+++ b/BB84/main.html
@@ -1,9 +1,5 @@
 <!DOCTYPE HTML>
-<!--
-	Forty by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 	<head>
 		<title>BB84加密互動網站</title>
@@ -45,11 +41,15 @@
 
 			</div>
 			<div>
-				<h1>量子密碼學</br>BB84加密互動網站</h1>
-				<p id="begintext"><strong>< < 選擇角色以開始遊戲 > ></strong></p>
 				<video class="videoback" autoplay loop muted>
 					<source src="beginngbackground.mp4">
 				</video>
+				<h1>量子密碼學</br>BB84加密互動網站</h1>
+				<p id="begintext"><strong>< < 選擇角色以開始遊戲 > ></strong></p>
+				<img id="playerAlice" src="picture/palyerA.png"/>
+				<img id="playerBob" src="picture/palyerB.png"/>
+				<img id="playerHack" src="picture/palyerH.png"/>
+
 			</div>
 
 		<!-- Scripts -->
@@ -60,6 +60,6 @@
 			<script src="../assets/js/breakpoints.min.js"></script>
 			<script src="../assets/js/util.js"></script>
 			<script src="../assets/js/main.js"></script>
-
+			<script src="main.js"></script>
 	</body>
 </html>
