--- a/BB84/main.html
+++ b/BB84/main.html
@@ -20,13 +20,13 @@
 					<header id="header">
 						<a href="../index.html" class="logo"><strong>Quantum</strong> <span>詼諧_GreyShoes Q</span></a>
 						<nav>
-							<a href="#menu">Menu</a>
+							<a href="#menu">遊戲玩法❔</a>
 						</nav>
 					</header>
 
 				<!-- Menu -->
 					<nav id="menu">
-						<ul class="links">
+						<!-- <ul class="links">
 							<li><a href="index.html">首頁</a></li>
 							<li><a href="https://twitter.com/GreyshoesQ">Twitter</a></li>
 							<li><a href="https://www.instagram.com/greyshoesq/">Instagram</a></li>
@@ -36,7 +36,7 @@
 						<ul class="actions stacked">
 							<li><a href="#" class="button primary fit">關於詼諧_GreyShoes Q</a></li>
 							<li><a href="#" class="button fit">獲取最新資訊</a></li>
-						</ul>
+						</ul> -->
 					</nav>
 
 			</div>
