--- a/BB84/main.html
+++ b/BB84/main.html
@@ -40,9 +40,9 @@
 					</nav>
 
 			</div>
-			<div>
-				<video class="videoback" autoplay loop muted>
-					<source src="beginngbackground.mp4">
+			<div id="content">
+				<video id="videoback" autoplay loop muted>
+					<source src="./beginngbackground.mp4">
 				</video>
 				<h1>量子密碼學</br>BB84加密互動網站</h1>
 				<p id="begintext"><strong>< < 選擇角色以開始遊戲 > ></strong></p>
@@ -51,6 +51,7 @@
 				<img id="playerHack" src="picture/palyerH.png"/>
 
 			</div>
+
 
 		<!-- Scripts -->
 			<script src="../assets/js/jquery.min.js"></script>
