--- a/BB84/main.html
+++ b/BB84/main.html
@@ -18,7 +18,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="../index.html" class="logo"><strong>Quantum</strong> <span>詼諧_GreyShoes Q</span></a>
+						<a href="main.html" class="logo"><strong>Quantum</strong> <span>量子密碼學</span></a>
 						<nav>
 							<a href="#menu">遊戲玩法/介紹❔</a>
 						</nav>
@@ -26,21 +26,12 @@
 
 				<!-- Menu -->
 					<nav id="menu">
-						<!-- <ul class="links">
-							<li><a href="index.html">首頁</a></li>
-							<li><a href="https://twitter.com/GreyshoesQ">Twitter</a></li>
-							<li><a href="https://www.instagram.com/greyshoesq/">Instagram</a></li>
-							<li><a href="https://github.com/greyshoes-Q">GitHub</a></li>
-							<li><a href="https://www.linkedin.com/in/%E8%A9%BC%E8%AB%A7-greyshoes-q-bab667230/">LinkedIn</a></li>
-						</ul>
-						<ul class="actions stacked">
-							<li><a href="#" class="button primary fit">關於詼諧_GreyShoes Q</a></li>
-							<li><a href="#" class="button fit">獲取最新資訊</a></li>
-						</ul> -->
+
 					</nav>
 
 			</div>
 			<div id="content">
+				<audio class="bgm" src="./bgm_mogu.mp3" autoplay preload="auto"></audio>
 				<video id="videoback" autoplay loop muted>
 					<source src="./beginngbackground.mp4">
 				</video>
@@ -49,50 +40,7 @@
 				<img id="playerAlice" src="picture/palyerA.png"/>
 				<img id="playerBob" src="picture/palyerB.png"/>
 				<img id="playerHack" src="picture/palyerH.png"/>
-				<!-- <audio class="tishiyin" src="tishiyin.mp3" autoplay preload="auto"></audio> -->
-
-				<!-- <video class="zhuanchang" autoplay muted>
-					<source src="./zhuanchang.mp4">
-				</video>
-				<div class="player">
-					<img src="./picture/A.svg" style="float: left;"/>
-					<h1 id="Ah1">Alice的視角</h1>
-					<p>請輸入完整密碼的前2位數：</p>
-					<select id="first" onchange="mima1(this)">
-						<option value="xuanzemima" selected disabled><strong>選擇🗝</strong></option>
-						<option value="0">0</option>
-						<option value="1">1</option>
-					</select>
-					<select id="second" onchange="mima2(this)">
-						<option value="xuanzemima" selected disabled><strong>選擇🗝</strong></option>
-						<option value="0">0</option>
-						<option value="1">1</option>
-					</select>
-					<span><button class="primary small" id="queren" onclick="querenmima()">確認 > </button></span>
-					<p>目前有可能的完整密碼：</p>
-					<div style="font-size: 2rem;">
-						<span id="mima000">000</span><span id="mima001">001</span><span id="mima010">010</span><span id="mima100">100</span><br/>
-						<span id="mima011">011</span><span id="mima101">101</span><span id="mima110">110</span><span id="mima111">111</span>
-					</div>
-					<span><button id="answerbtn" class="primary large" style="margin-top: 3%;" onclick="answerbtn()">確認3位數完整密碼答案 > </button></span>
-					<div id="bg-xunxichuan">
-						<div><img id="alice" src="./picture/alice.png"/></div>
-						<div id="text-xunxi"><strong style="color: black; font-size: 2rem;"><u>訊息串</u></strong></div>
-						<img id="zhibiao" src="./picture/zhibiao.png"/> -->
-						<!-- <p id="A1"><公告> 請選擇密碼0或1</p>
-						<p id="A2"><公告> Alice已輸入密碼</p>
-						<p id="A3"><公告> Bob（電腦）已隨機產生密碼</p>
-						<p id="A4"><公告> Bob（電腦）對密碼電路進行測量</p>
-						<div id="inner-xunxichuan">
-							<p id="A5yes"><私訊> Bob輸入的密碼與你相同</p>
-							<p id="A5no"><Bob私訊你>他輸入的密碼與你不相同</p>
-							<p id="A4"><公告> Alice與Bob都已成功獲得密碼關鍵</p>
-						</div>
-						 -->
-					</div>
-				</div>
 			</div>	
-		</div>
 		<!-- Scripts -->
 
 			<script src="play.js"></script>
